# rust-cli-template

./: Cargo.toml  LICENSE  README.md  cargo-generate.toml  flake.nix
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tests/: integration.rs
