[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{ author-name }} <{{ email }}>"]
readme = "README.md"
license = "MIT"
edition = "2024"
description = "{{ project-description }}"
repository = "https://github.com/{{ username }}/{{ repo-name }}"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }

[dev-dependencies]
assert_cmd = "2"
